feat: お問い合わせの実装

--- a/src/public/css/top.css
+++ b/src/public/css/top.css
@@ -20,6 +20,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    transition: 1s;
 }
 .menu-card__link {
     font-size: max(1vw, 15px);
@@ -39,6 +40,9 @@
     background-image: url('/storage/tree.jpg');
     border-radius: 20%;
 }
+.menu-card:nth-child(1):hover {
+    border-radius: 50%;
+}
 .menu-card:nth-child(2) {
     background-image: url('/storage/fuji.jpg');
     clip-path: circle(50% at 50% 50%);
@@ -52,16 +56,31 @@
         20% 90%
     );
 }
+.menu-card:nth-child(3):hover {
+    clip-path: polygon(
+        20% 0,
+        80% 0,
+        100% 90%,
+        0 90%
+    );
+}
 .menu-card:nth-child(4) {
     background-image: url('/storage/face.jpg');
     clip-path: inset(5% 8% 10% 0 round 70% 0);
+}
+.menu-card:nth-child(4):hover {
+    clip-path: inset(8% 8% 0 0 round 0 70%);
 }
 .menu-card:nth-child(5) {
     background-image: url('/storage/touring.jpg');
     clip-path: inset(10% 3% 7% 0 round 5% 20%);
 }
+.menu-card:nth-child(5):hover {
+    clip-path: inset(10% 3% 7% 0 round 20% 5%);
+}
 .menu-card__food {
     background-image: url('/storage/eating.jpg');
+    transition: 1s;
     clip-path: polygon(
         0 0,
         85% 0,
@@ -73,8 +92,21 @@
         0 100%
     );
 }
+.menu-card__food:hover {
+    clip-path: polygon(
+        0 0,
+        100% 0,
+        100% 35%,
+        85% 35%,
+        85% 65%,
+        100% 65%,
+        100% 100%,
+        0 100%
+    );
+}
 .menu-card__scenery {
     background-image: url('/storage/liver.jpg');
+    transition: 1s;
     clip-path: polygon(
         0 0,
         100% 0,
@@ -84,6 +116,18 @@
         15% 65%,
         15% 35%,
         0 35%
+    );
+}
+.menu-card__scenery:hover {
+    clip-path: polygon(
+        15% 0,
+        100% 0,
+        100% 100%,
+        15% 100%,
+        15% 65%,
+        0 65%,
+        0 35%,
+        15% 35%
     );
 }
 /* おすすめのところ */
