--- a/src/public/css/know_app.css
+++ b/src/public/css/know_app.css
@@ -18,6 +18,7 @@
     padding: 5%;
     box-shadow: 3px 3px 5px #fe7e15;
     z-index: 3;
+    border-radius: 10%;
 }
 .know-title {
     font-size: max(2vw, 20px);
@@ -37,13 +38,13 @@
     color: #676767;
     text-shadow: 2px 2px 3px #bababa;
     opacity: 0;
-    transform: translateY(40%);
+    transform: translateY(40%) translateX(40%);
     transition: opacity 3s ease-out, transform 3s ease-out;
 }
 .is-active {
   opacity: 1;
   visibility: visible;
-  transform: translateY(0);
+  transform: translateY(0) translateX(0);
 }
 .know-image {
     position: absolute; 
