--- a/src/public/css/profile/profile.css
+++ b/src/public/css/profile/profile.css
@@ -22,6 +22,7 @@
 .profile-form {
     width: 100%;
 }
+.image,
 .nickname,
 .gender,
 .age {
@@ -30,6 +31,16 @@
     width: 100%;
     margin-bottom: 8%;
 }
+.my-image {
+    width: max(12vw, 95px);
+    height: max(12vw, 95px); 
+    border-radius: 20px;
+    object-fit: cover;
+    cursor: pointer;
+}
+.image input[type="file"] {
+    display: none;
+}
 .gender-title {
     color: #fe7e15;
     text-shadow: 1px 1px #04a1f0;
@@ -37,6 +48,7 @@
     font-size: max(1.8vw, 18px);
     margin-bottom: 0;
 }
+.image-title,
 .nickname-title,
 .gender-check,
 .age-title {
