--- a/src/public/css/layouts/common.css
+++ b/src/public/css/layouts/common.css
@@ -4,7 +4,12 @@ body {
     max-width: 1500px;
     background-color: #a5a5a5;
     font-family: Arial, sans-serif;
+    user-select: none;
 }
+body.is-modal {
+    overflow: hidden;
+}
+
 /* header */
 .header {
     display: flex;
@@ -103,33 +108,6 @@ body {
     text-shadow: 2px 2px 1px #04a1f0;
     font-size: max(1.3vw, 14px);
 }
-
-/* カーソル */
-/* .cursor {
-    background-color: #262626;
-    opacity: 0;
-    position: absolute;
-    pointer-events: none;
-    z-index: 999;
-    position: fixed;
-    top: -25px; 
-    left: -25px;
-    width: 50px;
-    height: 50px;
-    transition: transform .2s ease-out;
-    border-radius: 50%;
-}
-.cursor::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: -7px;
-    left: -7px;
-    border: 7px solid rgb(255, 166, 0);
-    border-radius: 50%;
-    z-index: 999;
-} */
 
 .cursor {
     width: 50px;
